<resources>
    <string name="app_name">Donation</string>
    <string name="donateTitle">Welcome Homer</string>
    <string name="donateSubtitle">Please give generously</string>
    <string name="donateButton">Donate</string>
    <string name="PayPal">PayPal</string>
    <string name="Direct">Direct</string>
    <string name="donateSubtitlee">Give</string>
    <string name="menuSettings">Settings</string>
    <string name="menuReport">Report</string>
    <string name="reportTitle">Report</string>
    <string name="Amount" />
    <string name="amount">Amount</string>
    <string name="amountTotal">Total Recieved</string>
    <string name="total">Total Recieved</string>

    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
</resources>