<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.patrick.donation.Donate">

    <TextView
        android:id="@+id/donateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/donateTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/donateButton"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:onClick="donateButtonPressed"
        />



    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/paymentMethod"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/donateSubtitlee">

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PayPal" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/Direct" />
    </RadioGroup>

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="26dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toRightOf="@+id/paymentMethod"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="363dp"
        android:layout_height="57dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/donateButton"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/donateSubtitlee"
        android:layout_width="98dp"
        android:layout_height="18dp"
        android:text="@string/donateSubtitlee"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/donateTitle"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
